--- a/index.html
+++ b/index.html
@@ -1,49 +1,48 @@
 <!DOCTYPE html>
-<!-- saved from url=(0031)https://www.liemerscollege.com/ -->
+<!-- saved from https://www.liemerscollege.com/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"><style>body {transition: opacity ease-in 0.2s; } 
 body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relative; } 
 </style>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>This is not official liemers college</title>
+  <title>Pages are funky</title>
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="./files/lc.css">
 </head>
 <body>
   <!-- Main Header -->
-  <h1>This isn't the official liemerscollege website.</h1>
+  <h1>Welcome! I suppose-</h1>
 
   <!-- Content Section -->
   <div class="content">
-    <p>Hi there! I'm <strong>soul :3</strong></p>
-    <p>Discord: <code>@soul_vw</code></p>
+    <p>Hi there! I'm <strong>dani ^^</strong></p>
+    <p>Discord: <code>@dani_furball</code></p>
 
     <p>
-      Do you like femboys? If so, join this server and tell me! 
-      (It's a redirect to a Discord server — it might take a second.)
+      el stupid youtube channel
+      right there lol
     </p>
     <p>
-      <a href="https://discord.gg/Aadb5xZ3AB" target="_blank" rel="noopener noreferrer">
-        Join this server
+      <a href="https://youtube.com/@chesslifefrever" target="_blank" rel="noopener noreferrer">
+        YouTube
       </a>
     </p>
 
     <p>
-      Official Nyarch Linux server! 
+      nyarch discord server cuz why tf not 
       <a href="https://discord.gg/gMFXrx7RFh" target="_blank" rel="noopener noreferrer">
         Join here
       </a>
     </p>
 
     <p>
-  <a href="https://www.liemerscollege.com/domain_sale_page.html" class="back-link">← Purchase this domain </a>
+  <a href="https://www.github.com/DaniHasReal" class="back-link">My stupid GitHub</a>
  
 </p>
 
     <p>
-      I like femboys and I cannot lie, you mother fuckers can’t deny. 
-      When a girl walks in and she’s actually a guy, a dingaling in your face — you <strong>GET SPRUNG</strong> 
-      and suddenly you’re attracted to men. MAN SHUT THE FU- OW MY ASS
+      I like femboys :3 Ya'll should like em too :3c
+      there aint no way yall dont
     </p>
 
     <!-- Image -->
