--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
   <title>Pages are funky</title>
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="./files/lc.css">
+  <link rel="icon" href="./files/favicon.png" type="image/png">
 </head>
 <body>
   <!-- Main Header -->
