--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ body[unresolved] {opacity: 0; display: block; overflow: hidden; position: relati
 </style>
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pages are funky</title>
+  <title>meow :3</title>
   <!-- Link to external CSS -->
   <link rel="stylesheet" href="./files/lc.css">
   <link rel="icon" href="./files/favicon.png" type="image/png">
